--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,8 @@
   "action": {
     "default_popup": "popup/popup.html"
   },
+  "permissions": ["scripting"],
+  "host_permissions": ["https://*.youtube.com/*"],
   "content_scripts": [
     {
       "matches": ["https://*.youtube.com/*"],
