--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,12 @@
   "action": {
     "default_popup": "popup/popup.html"
   },
-  "permissions": ["scripting"],
-  "host_permissions": ["https://*.youtube.com/*"],
+  "permissions": ["scripting", "http://34.64.207.91:8080/*"],
+  "host_permissions": [
+    "https://*.youtube.com/*",
+    "http://localhost:3000/",
+    "http://34.64.207.91:8080/*"
+  ],
   "content_scripts": [
     {
       "matches": ["https://*.youtube.com/*"],
